trying to fix alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -191,6 +191,8 @@ h6{
     height: 100vh;
     max-width: 100vh;
     flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
    
     
   }
@@ -207,12 +209,6 @@ h6{
   }
   input{
     max-width: 250px;
-  }
-  .fixed{
-    
-    max-width: 80%;
-    
-    
   }
   .fixed h1{
     font-size: 20px;
